docs: update api swagger file
